# shafurui-backend/internal/controller/swagger_response.go
@@ -19,3 +19,9 @@ type SwaggerAuthLoginResponse struct {
 	Message string                  `json:"message" example:"success"`
 	Data    model.AuthLoginResponse `json:"data"`
 }
+
+type SwaggerUserInfoResponse struct {
+	Code    int                    `json:"code" example:"1000"`
+	Message string                 `json:"message" example:"success"`
+	Data    model.UserInfoResponse `json:"data"`
+}
