# shafurui-backend/internal/model/user_model.go
@@ -1,0 +1,7 @@
+package model
+
+type UserInfoResponse struct {
+	UserID   int64  `json:"userID"`
+	Username string `json:"username"`
+	Nickname string `json:"nickname"`
+}
